# AdventOfCode2023

./: .gitignore
Release1/: CMakeLists.txt  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp  test.txt
Release10/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release11/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release12/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  Part3.cpp  main.cpp  out.txt
Release13/: CMakeLists.txt  HelperFunctions.h  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp  test.txt
Release14/: HelperFunctions.cpp  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release15/: FileReader.h  Part1.cpp  Part1.h  Part2.cpp  Part2.h
Release16/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  Part3.h
Release17/: Part1.cpp  Part1.h  Part2.cpp  Part2.h
Release18/: FileBlockReader.cpp  HelperFunctions.cpp  Part1.cpp  Part1.h  Part2.cpp  Part2.h
Release19/: FileLineReader.cpp  Part1.cpp  Part1.h  Part2.cpp  Part2.h
Release2/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release20/: Elf.cpp  FileReader.cpp  Part1.cpp  Part1.h  Part2.cpp  Part2.h
Release21/: HelperFunctions.cpp  HelperFunctions.h  Part1.cpp  Part1.h  Part2.cpp  Part2.h  in.txt
Release3/: HelperFunctions.cpp  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release4/: FileBlockReader.h  FileLineReader.h  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp
Release5/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp  test.txt
Release6/: Part1.cpp  Part1.h  Part2.cpp  Part2.h  Part3.h
Release7/: Elf.h  Part1.cpp  Part1.h  Part2.cpp  Part2.h  main.cpp  test.txt
(+10 files in other folders)
